# hello_world

./: .gitignore  LICENSE  Makefile  README.md  dev-requirements.txt  requirements.in  requirements.txt  setup.cfg  setup.py
config/: app.yaml  dotenv_template  gunicorn.py
http_agent/: app.py  request.py  router.py  settings.py  views.py
http_agent/utils/: __init__.py  errors.py  etag.py
http_agent/utils/middlewares/: __init__.py  accept.py  request_id.py
kernel/: __init__.py  app.py  backends.py  errors.py  identity.py
kernel/repos/: greetings_repo.py
kernel/services/: greetings_service.py
kernel/validation/: __init__.py  schemas.py
test/http_agent/: test_request.py  test_settings.py
test/kernel/: test_identity.py
test/kernel/validation/: test_validator.py
tests/http_agent/utils/middlewares/: test_accept.py
