[metadata]
name = hello_world
description = Template for REST services
author = Steven Seguin
author-email = steven.seguin+hello_world@gmail.com
home-page = https://github.com/sseg/hello_world
keywords = web
zip-safe = false

[files]
packages =
    kernel
    http_agent

[flake8]
exclude = .eggs,.git,env
max-complexity = 5

[tool:pytest]
addopts = --cov http_agent --cov kernel --cov-report term-missing
testpaths = test
